Update project structure and enhance data access components
Several new data access components were introduced, with updates to workspace.xml to reflect these changes. A new IDataLockDbContext interface is added, comprehensive updates are made to the DataLockDBContext class, and important configurations for data access were introduced in the appsettings.json file under DistributedLock service. This restructure enhances the overall data handling strategy of the project.

--- a/1 - Services/DistributedLock/appsettings.json
+++ b/1 - Services/DistributedLock/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataAccess": {
+    "ConnectionString": "Server=192.168.1.125;Database=DistributedLockDB;TrustServerCertificate=true",
+    "UserId": "DistributedAdmin",
+    "Password": "Distributed1!"
+  }
 }
