Refactor data access and update workspace settings
Reengineered data access using Dapper and SqlConnection instead of Entity Framework. This involves renaming data access configuration class, updating CSProj and Workspace files. Additionally, added new SQL Scripts and updated DistributedLock class and IDataLockDbContext interface to fit with new implementations. Updating workspace settings in multiple sections including external source directories, run manager, recent temporary and others also took place.

--- a/1 - Services/DistributedLock/appsettings.json
+++ b/1 - Services/DistributedLock/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DataAccess": {
+  "DbConnectionSettings": {
     "ConnectionString": "Server=192.168.1.125;Database=DistributedLockDB;TrustServerCertificate=true",
     "UserId": "DistributedAdmin",
     "Password": "Distributed1!"
