--- a/1 - Services/DistributedLock/DistributedLock.csproj
+++ b/1 - Services/DistributedLock/DistributedLock.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <InvariantGlobalization>true</InvariantGlobalization>
+        <InvariantGlobalization>false</InvariantGlobalization>
+        <NeutralLanguage>en-US</NeutralLanguage>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +15,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\3 - Common\DTO\DTO.csproj"/>
+        <ProjectReference Include="..\..\4 - Data Access\LockDataAccess\LockDataAccess.csproj"/>
     </ItemGroup>
 
 </Project>
