--- a/4 - Data Access/LockDataAccess/LockDataAccess.csproj
+++ b/4 - Data Access/LockDataAccess/LockDataAccess.csproj
@@ -4,21 +4,18 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <InvariantGlobalization>false</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\2 - Interfaces\ILockDataAccess\ILockDataAccess.csproj"/>
+        <ProjectReference Include="..\..\3 - Common\DTO\DTO.csproj"/>
         <ProjectReference Include="..\DataModel\DataModel.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4"/>
+        <PackageReference Include="Dapper" Version="2.1.35"/>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0"/>
     </ItemGroup>
 
 </Project>
