Refactor data access and update workspace
Reimplemented data access using Dapper and SqlConnection instead of Entity Framework which involved updating different files and classes. Also, adjusted workspace settings that reflected the aforementioned changes and added new methods for lock acquisition and release. Updated lock timeout setting in DbConnectionSettings.

--- a/1 - Services/DistributedLock/appsettings.json
+++ b/1 - Services/DistributedLock/appsettings.json
@@ -9,6 +9,7 @@
   "DbConnectionSettings": {
     "ConnectionString": "Server=192.168.1.125;Database=DistributedLockDB;TrustServerCertificate=true",
     "UserId": "DistributedAdmin",
-    "Password": "Distributed1!"
+    "Password": "Distributed1!",
+    "LockTimeoutMin": 2
   }
 }
